[package]
name = "tan_lsp_server"
description = "An LSP server for the Tan Language"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tanlang-org/tan_lsp_server"
keywords = ["tan", "language", "lsp", "ide"]
authors = ["George Moschovitis <gmosx@reizu.org>"]

[dependencies]
anyhow = "1"
lsp-types = "0.93"
lsp-server = "0.7"
clap = "4"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tan_lsp = { path = "tan_lsp", version = "0.4" }
