[package]
name = "tan-language-server"
description = "An LSP server for the Tan Language"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tan-language/tan-language-server"
keywords = ["tan", "language", "lsp", "ide"]
authors = ["George Moschovitis <gmosx@reizu.org>"]

[dependencies]
anyhow = "1"
lsp-types = "0.96"
lsp-server = "0.7"
clap = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8"
tan = { path = "../tan", version = "0.16" }
tan-formatting = { path = "../tan-formatting", version = "0.16" }
tan-lints = { path = "../tan-lints", version = "0.16" }
