[package]
name = "tan_lsp"
description = "LSP support for the Tan Language"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tanlang-org/tan_lsp_server"
keywords = ["tan", "language", "lsp", "ide"]
authors = ["George Moschovitis <gmosx@reizu.org>"]

[dependencies]
lsp-types = "0.94"
